SimpleComplex/Config 1.x, 2017-06-24
------------------------------------
- IniConfigBase is of course an abstract class; even if it doesn't declare
  abstract methods.
- SectionedWrapper, IniConfig and IniSectionedConfig shan't have getInstance()
  method, because it doesn't make sense as a general principle for configuration
  classes. Whereas EnvConfig and EnvSectionedConfig can have getInstance()
  method, because there can only be a single set of environment variables.
- Qualify IniConfigBase cache store name.
- Convenience class Config, in front of IniSectionedConfig.
- Cli commands get, set, delete, refresh fully implemented.

SimpleComplex/Config 1.x, 2017-06-21
------------------------------------
- Don't use 'iterable' type; effectively useless because stdClass is iterable
  but not 'iterable' (PHP still sucks type-wise).

SimpleComplex/Config 1.x, 2017-06-19
------------------------------------
- Tell cache store to live forever; ignore time-to-live completely.

SimpleComplex/Config 1.x, 2017-06-18
------------------------------------
- (Sectioned)ConfigInterface now require implementing 'magic' getter and setter
  to expose 'name' property as read-only.
- Simple and sectioned ini configuration classes both based on same base class.
- Ini path(s) traversal recursive, skipping .hidden dirs and files (like .git).

SimpleComplex/Config 1.x, 2017-06-16
------------------------------------
- Wrap simple config as sectioned config.
  Enables classes using configuration to support SectionedConfigInterface
  _and_ ConfigInterface transparently.
- Use ConfigKey::validate() for all name and key arguments.
- Sectioned-wrapped enviroment var config class.

SimpleComplex/Config 1.x, 2017-06-15
------------------------------------
- Sectioned configuration interface and implementation.

SimpleComplex/Config 1.x, 2017-06-13
------------------------------------
- PSR-16 SimpleCache-like config interface.